--- a/res/layout/homeactivity.xml
+++ b/res/layout/homeactivity.xml
@@ -12,6 +12,7 @@
     </com.supermap.mapping.MapView>
 
     <RelativeLayout
+        android:id="@+id/locationRelativeLayout"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_above="@id/mapView"
@@ -31,6 +32,59 @@
             android:contentDescription="@string/actionlocation"
             android:padding="7dp"
             android:src="@drawable/ic_action_location" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/locationdetail"
+        android:layout_width="fill_parent"
+        android:layout_height="96dp"
+        android:layout_above="@id/mapView"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="-96dp"
+        android:background="#fff" >
+
+        <LinearLayout
+            android:id="@+id/linearLayout1"
+            android:layout_width="fill_parent"
+            android:layout_height="48dp"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/location"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/locationdetail" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true" >
+
+            <Button
+                android:id="@+id/button1"
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:text="@string/searcharround" />
+
+            <Button
+                android:id="@+id/btnDetail"
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:layout_gravity="right"
+                android:layout_weight="1"
+                android:text="@string/detail" />
+        </LinearLayout>
     </RelativeLayout>
 
 </RelativeLayout>
