--- a/res/layout/userpref.xml
+++ b/res/layout/userpref.xml
@@ -3,6 +3,7 @@
 
     <LinearLayout
         style="@style/behindMenuScrollContent"
+        android:background="#eee"
         android:paddingTop="25dp" >
     </LinearLayout>
 
