--- a/res/layout/userpref.xml
+++ b/res/layout/userpref.xml
@@ -2,9 +2,37 @@
     style="@style/leftBehindMenuScroll" >
 
     <LinearLayout
-        style="@style/behindMenuScrollContent"
-        android:background="#eee"
-        android:paddingTop="25dp" >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="64dp"
+                android:layout_height="64dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <Switch
+                android:id="@+id/wifiswitch"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_gravity="right"
+                android:layout_margin="8dp"
+                android:text="@string/wifiswitch"
+                android:textColor="#666"
+                android:textSize="22sp" />
+        </LinearLayout>
     </LinearLayout>
 
 </ScrollView>
