--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -5,13 +5,13 @@
     <style name="AppTheme" parent="AppBaseTheme"></style>
 
     <style name="leftBehindMenuScroll">
-        <item name="android:layout_width">240dp</item>
+        <item name="android:layout_width">260dp</item>
         <item name="android:layout_height">fill_parent</item>
-        <item name="android:background">#fff</item>
+        <item name="android:background">#eee</item>
     </style>
 
     <style name="rightBehindMenuScroll">
-        <item name="android:layout_width">200dp</item>
+        <item name="android:layout_width">120dp</item>
         <item name="android:layout_height">fill_parent</item>
         <item name="android:background">#fff</item>
     </style>
