--- a/res/layout/homeactivity.xml
+++ b/res/layout/homeactivity.xml
@@ -83,7 +83,7 @@
                     android:textSize="18sp" />
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/txtAddress"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="4dp"
