--- a/res/layout/userpref.xml
+++ b/res/layout/userpref.xml
@@ -3,7 +3,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical" >
 
         <LinearLayout
@@ -14,8 +14,8 @@
             <ImageView
                 android:id="@+id/imageView1"
                 android:layout_width="64dp"
-                android:layout_height="64dp" />
-
+                android:layout_height="64dp"
+                android:contentDescription="@string/app_name" />
         </LinearLayout>
 
         <LinearLayout
@@ -30,7 +30,7 @@
                 android:layout_gravity="right"
                 android:layout_margin="8dp"
                 android:text="@string/wifiswitch"
-                android:textColor="#666"
+                android:textColor="#ccc"
                 android:textSize="22sp" />
         </LinearLayout>
     </LinearLayout>
