--- a/res/layout/actionmore.xml
+++ b/res/layout/actionmore.xml
@@ -25,6 +25,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/linearLecture"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginBottom="1dp"
@@ -57,6 +58,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/linearPlay"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginBottom="1dp"
@@ -89,6 +91,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/linearCourse"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginBottom="1dp"
@@ -121,6 +124,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/linearSetting"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_gravity="bottom"
