--- a/res/layout/homeactivity.xml
+++ b/res/layout/homeactivity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="style/homeActivity"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#fff"
@@ -101,6 +102,7 @@
 
                 <Button
                     android:id="@+id/button1"
+                    style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="match_parent"
                     android:layout_height="fill_parent"
                     android:layout_weight="1"
@@ -109,6 +111,7 @@
 
                 <Button
                     android:id="@+id/btnDetail"
+                    style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="match_parent"
                     android:layout_height="fill_parent"
                     android:layout_gravity="right"
