--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -4,6 +4,10 @@
 
     <style name="AppTheme" parent="AppBaseTheme"></style>
 
+    <style name="homeActivity">
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
+
     <style name="leftBehindMenuScroll">
         <item name="android:layout_width">260dp</item>
         <item name="android:layout_height">fill_parent</item>
@@ -46,5 +50,6 @@
         <item name="android:colorBackgroundCacheHint">@null</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
+    	
 
 </resources>
