--- a/res/layout/popupwindow.xml
+++ b/res/layout/popupwindow.xml
@@ -3,17 +3,130 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_gravity="center"
-    android:background="#b0000000"
+    android:background="@drawable/popupbg"
     android:gravity="center"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:padding="2dp" >
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/popupLinearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:background="@drawable/downbutton_corner"
         android:gravity="center"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:padding="2dp" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="2dp" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:layout_marginTop="1dp"
+                android:background="@drawable/sliderbg" >
+
+                <TextView
+                    android:id="@+id/txtActivityTitle"
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="6dp"
+                    android:layout_weight="12"
+                    android:text="@string/app_name"
+                    android:textColor="#fff"
+                    android:textSize="16sp" />
+
+                <LinearLayout
+                    android:layout_width="64dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right" >
+
+                    <ImageView
+                        android:id="@+id/imageMap"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_gravity="right"
+                        android:contentDescription="@string/app_name"
+                        android:padding="8dp"
+                        android:src="@drawable/ic_map" />
+
+                    <ImageView
+                        android:id="@+id/imageLike"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_gravity="right"
+                        android:contentDescription="@string/app_name"
+                        android:padding="8dp"
+                        android:src="@drawable/ic_unrate" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/txtSpeaker"
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:layout_marginTop="1dp"
+                android:background="@drawable/sliderbg"
+                android:paddingLeft="8dp"
+                android:paddingTop="6dp"
+                android:text="@string/detailtitle"
+                android:textColor="#fff"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/txtSpeakerTitle"
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:layout_marginTop="1dp"
+                android:background="@drawable/sliderbg"
+                android:paddingLeft="8dp"
+                android:paddingTop="6dp"
+                android:text="@string/detailtitle"
+                android:textColor="#fff"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/txtDate"
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:layout_marginTop="1dp"
+                android:background="@drawable/sliderbg"
+                android:paddingLeft="8dp"
+                android:paddingTop="6dp"
+                android:text="@string/detailtitle"
+                android:textColor="#fff"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/txtPlace"
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:layout_marginBottom="1dp"
+                android:layout_marginTop="1dp"
+                android:background="@drawable/sliderbg"
+                android:paddingLeft="8dp"
+                android:paddingTop="6dp"
+                android:text="@string/detailtitle"
+                android:textColor="#fff"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/txtDecription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/sliderbg"
+                android:paddingLeft="8dp"
+                android:paddingTop="6dp"
+                android:scrollbars="vertical"
+                android:text="@string/txtdecription"
+                android:textColor="#fff"
+                android:textSize="14sp" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
