--- a/res/layout/row.xml
+++ b/res/layout/row.xml
@@ -3,41 +3,45 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="4dp" >
+    android:paddingLeft="4dp"
+    android:paddingRight="4dp" >
 
     <TextView
         android:id="@+id/txtTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="2dp"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp"
+        android:paddingTop="2dp"
         android:text="@string/app_name"
         android:textColor="#666"
         android:textSize="18sp"
         android:textStyle="bold" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+    <TextView
+        android:id="@+id/txtLocation"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:paddingBottom="1dp"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp"
+        android:paddingTop="1dp"
+        android:text="@string/app_name"
+        android:textColor="#666"
+        android:textSize="12sp" />
 
-        <TextView
-            android:id="@+id/txtDateTime"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="2dp"
-            android:text="@string/app_name"
-            android:textColor="#666"
-            android:textSize="10sp" />
-
-        <TextView
-            android:id="@+id/txtLocation"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="2dp"
-            android:text="@string/app_name"
-            android:textColor="#6663"
-            android:textSize="10sp" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/txtDateTime"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:paddingBottom="1dp"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp"
+        android:paddingTop="1dp"
+        android:text="@string/app_name"
+        android:textColor="#666"
+        android:textSize="12sp" />
 
 </LinearLayout>
