--- a/res/layout/homeactivity.xml
+++ b/res/layout/homeactivity.xml
@@ -59,65 +59,57 @@
         <RelativeLayout
             android:id="@+id/locationDetail"
             android:layout_width="match_parent"
-            android:layout_height="96dp"
+            android:layout_height="50dp"
             android:layout_above="@id/mapViewRelativeLayout"
             android:layout_alignBottom="@id/mapViewRelativeLayout"
             android:layout_alignParentBottom="false"
             android:layout_alignParentLeft="true"
-            android:layout_marginBottom="-96dp"
-            android:background="#fff" >
+            android:layout_marginBottom="-50dp"
+            android:background="#ccc" >
 
             <LinearLayout
-                android:id="@+id/linearLayout1"
                 android:layout_width="fill_parent"
-                android:layout_height="48dp"
-                android:orientation="vertical" >
-
-                <TextView
-                    android:id="@+id/txtAccuracy"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginTop="4dp"
-                    android:text="@string/location"
-                    android:textColor="#333"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:id="@+id/txtAddress"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginTop="2dp"
-                    android:text="@string/geocoding"
-                    android:textColor="#4c4c4c"
-                    android:textSize="12sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true" >
+                android:layout_alignParentLeft="true"
+                android:background="#fff" >
 
-                <Button
-                    android:id="@+id/button1"
-                    style="?android:attr/buttonBarButtonStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    android:text="@string/querysurrounding"
-                    android:textColor="#666666" />
+                <LinearLayout
+                    android:id="@+id/linearLayout1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="48dp"
+                    android:layout_weight="4"
+                    android:orientation="vertical" >
+
+                    <TextView
+                        android:id="@+id/txtAccuracy"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="4dp"
+                        android:layout_marginTop="2dp"
+                        android:text="@string/location"
+                        android:textColor="#333"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/txtAddress"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="4dp"
+                        android:layout_marginTop="0dp"
+                        android:text="@string/geocoding"
+                        android:textColor="#4c4c4c"
+                        android:textSize="12sp" />
+                </LinearLayout>
 
                 <Button
                     android:id="@+id/btnDetail"
-                    style="?android:attr/buttonBarButtonStyle"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
-                    android:layout_gravity="right"
                     android:layout_weight="1"
                     android:text="@string/detail"
-                    android:textColor="#666666" />
+                    android:textColor="#333" />
+
             </LinearLayout>
         </RelativeLayout>
     </RelativeLayout>
