--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -11,7 +11,7 @@
     <style name="leftBehindMenuScroll">
         <item name="android:layout_width">260dp</item>
         <item name="android:layout_height">fill_parent</item>
-        <item name="android:background">@drawable/sliderbg</item>
+        <item name="android:background">#000</item>
     </style>
 
     <style name="rightBehindMenuScroll">
@@ -50,6 +50,5 @@
         <item name="android:colorBackgroundCacheHint">@null</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
-    	
 
 </resources>
