--- a/res/layout/sliderright.xml
+++ b/res/layout/sliderright.xml
@@ -124,6 +124,39 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/linearLike"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginBottom="1dp"
+            android:background="@drawable/repeat_bg" >
+
+            <ImageView
+                android:id="@+id/imageLike"
+                android:layout_width="16dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/ic_rate" />
+
+            <TextView
+                android:id="@+id/txtLike"
+                android:layout_width="0dip"
+                android:layout_height="32dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_weight="2"
+                android:gravity="center_vertical|left"
+                android:text="@string/txtlike"
+                android:textColor="#ccc"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/linearSetting"
             android:layout_width="match_parent"
             android:layout_height="48dp"
