--- a/res/layout/row.xml
+++ b/res/layout/row.xml
@@ -14,7 +14,7 @@
         android:paddingRight="2dp"
         android:paddingTop="2dp"
         android:text="@string/app_name"
-        android:textColor="#666"
+        android:textColor="#000"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -43,5 +43,12 @@
         android:text="@string/app_name"
         android:textColor="#666"
         android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/txtId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:visibility="gone" />
 
 </LinearLayout>
