--- a/res/layout/queryresult.xml
+++ b/res/layout/queryresult.xml
@@ -17,7 +17,7 @@
     <ListView
         android:id="@+id/listResult"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="fill_parent" >
     </ListView>
 
 </LinearLayout>
