--- a/res/layout/homeactivity.xml
+++ b/res/layout/homeactivity.xml
@@ -9,7 +9,8 @@
     <LinearLayout
         android:id="@+id/actionbar"
         android:layout_width="fill_parent"
-        android:layout_height="48dp" >
+        android:layout_height="50dp"
+        android:background="#666" >
 
         <include layout="@layout/actionbar" />
     </LinearLayout>
@@ -18,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:layout_marginBottom="0dp"
-        android:layout_marginTop="48dp" >
+        android:layout_marginTop="50dp" >
 
         <RelativeLayout
             android:id="@+id/mapViewRelativeLayout"
@@ -31,6 +32,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" >
             </com.supermap.mapping.MapView>
+
+            <ProgressBar
+                android:id="@+id/prbMap"
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true" />
 
             <RelativeLayout
                 android:id="@+id/locationRelativeLayout"
