--- a/res/layout/lbswidget.xml
+++ b/res/layout/lbswidget.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="@string/app_name"
+            android:text="@string/widgetitle"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#fff"
             android:textSize="18sp" />
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
-            android:text="@string/app_label"
+            android:text=""
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="#eee"
             android:textSize="12sp" />
